--- a/src/index.css
+++ b/src/index.css
@@ -1,32 +1,6 @@
 @import "tailwindcss";
 
-@theme {
-  --color-brand-bg-light: #f1f5f9; /* Slightly darker light-bg to make white cards pop */
-  --color-brand-bg-dark: #030014;
-}
 
-:root {
-  background-color: var(--color-brand-bg-light);
-  color: #464545; /* Absolute black for day mode */
-  scroll-behavior: smooth;
-}
-
-.dark  {
-  background-color: var(--color-brand-bg-dark);
-  color: #ffffff ; /* Absolute white for dark mode */
-}
-
-body {
-  @apply transition-colors duration-500 antialiased overflow-x-hidden;
-  padding-bottom: 150px;
-  font-size: 1.1rem; /* Global text size increase */
-}
-
-/* Universal Text Visibility Fix */
-.dark :where(h1, h2, h3, p,):not([class*="text-"]) {
-  color: #fffbfb;
-}
-
-section {
-  scroll-margin-top: 100px;
+html {
+  scroll-behavior: smooth !important;
 }
